# PIrate_research

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_QA_VALIDATION_REPORT.md  README.md  development_checklist.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage_research_system.py  project-meta.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: cleanup.md  developer.md  devops.md  infrastructure.md  orchestrator.md  qa.md  status.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: developer.md  devops.md  infrastructure.md  qa.md
config/: easy_database_config.yaml  faculty_search_sources.yaml  scraping_urls.yaml
config/institution_templates/: LIBERAL.yaml  STATEUNI.yaml  default.yaml
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  DEVOPS.md  GIT_WORKFLOW.md  INFRASTRUCTURE_SUMMARY.md  RUNBOOK.md
docs/infrastructure/: phase-4-infrastructure-readiness-assessment.md
docs/operations/: phase-4-operations-runbook.md
docs/troubleshooting/: phase-4-troubleshooting-guide.md
monitoring/: docker-compose.monitoring.yml  phase-4-monitoring-setup.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: agent-performance.json  phase-4-dashboard-analytics.json  research-system-overview.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: research-system-alerts.yml
nginx/: nginx.conf
scripts/: deploy.sh  init-db.sql  setup-dev.ps1  setup-dev.sh
src/: main.py
src/agents/: collaborator_agent.py  database_discovery_agent.py  idea_agent.py  ingestion_agent.py  matcher_agent.py  notification_agent.py
src/core/: a2a_protocols.py  analytics.py  api_documentation.py  circuit_breaker.py  config_manager.py  logging_config.py  metrics.py  models.py  proposal_variants.py  scoring_models.py  security_monitoring.py
src/dashboard/: __init__.py  admin_dashboard.py
src/tools/: database_plugins.py  generic_faculty_finder.py  generic_scraper.py  mock_data_generator.py
src/tools/exporters/: __init__.py  collaboration_exporter.py  proposal_exporter.py
tests/: test_database_discovery_agent.py  test_generic_faculty_finder.py  test_generic_scraper.py  test_main.py
tests/agents/: __init__.py  test_collaborator_agent.py  test_idea_agent.py  test_matcher_agent.py  test_notification_agent.py
tests/core/: __init__.py  test_analytics.py  test_config_manager.py  test_models.py  test_proposal_variants.py  test_scoring_models.py
tests/dashboard/: __init__.py  test_admin_dashboard.py
tests/mock_data/: arxiv_api_response.json  complete_data_package.json  full_faculty_list.json  invalid_faculty_profile.json  invalid_funding_opportunity.json  matched_faculty_funding_pairs.json  mock_llm_responses.json  orcid_api_response.json  processed_faculty.json  processed_funding.json  pubmed_api_response.json  recommendation_history.json  sample_nih_response.html  scholar_api_response.json  scoring_test_cases.json  system_metrics.json  valid_faculty_profile.json  valid_funding_opportunity.json
tests/mock_data/institution_configs/: TESTUNI.yaml
tests/tools/: __init__.py
tests/tools/exporters/: __init__.py  test_collaboration_exporter.py  test_proposal_exporter.py
